--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnSoundBoard")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnSoundBoard")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="UnSoundBoardGameModeBase")
+bUseFixedFrameRate=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
