--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -119,3 +119,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+
