Get started on load button fucntionality

--- a/UnSoundBoard.uproject
+++ b/UnSoundBoard.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "UnSoundBoard",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
