Create GameMode with no default pawn or session

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,4 +122,5 @@ r.LightPropagationVolume=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/MainLevel.MainLevel
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
