--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -124,3 +124,9 @@ EditorStartupMap=/Game/Maps/MainLevel.MainLevel
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
+[/Script/WmfMediaFactory.WmfMediaSettings]
+AllowNonStandardCodecs=False
+LowLatency=False
+HardwareAcceleratedVideoDecoding=False
+NativeAudioOut=True
+
