Stop all media players when stop all sounds button is pressed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,7 +126,7 @@ GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/WmfMediaFactory.WmfMediaSettings]
 AllowNonStandardCodecs=False
-LowLatency=False
+LowLatency=True
 HardwareAcceleratedVideoDecoding=False
 NativeAudioOut=True
 
